Bug 363371 - Plasma crashes randomly when on the task panel miniatures app windows shows up.
Summary: Plasma crashes randomly when on the task panel miniatures app windows shows up.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.5.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
: 362509 362669 363336 363359 363380 366702 371753 372219 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-21 15:12 UTC by Dariusz Krzempek
Modified: 2016-11-09 00:38 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (16.08 KB, text/plain)
2016-06-11 13:59 UTC, Rene du R. Sacramento
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dariusz Krzempek 2016-05-21 15:12:35 UTC
Application: plasmashell (5.5.5)

Qt Version: 5.5.1
Operating System: Linux 4.4.0-22-generic x86_64
Distribution: Ubuntu 16.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:

Randomly with any application running.
Crashes always occure (randomly) when it try to shows miniature app. windows on task panel.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Plazma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa3359ea8c0 (LWP 7527))]

Thread 14 (Thread 0x7fa320bdb700 (LWP 7529)):
#0  0x00007fa33010de8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fa3341d2c62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007fa3341d48d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fa322d29629 in QXcbEventReader::run (this=0x25dc740) at qxcbconnection.cpp:1253
#4  0x00007fa33080384e in QThreadPrivate::start (arg=0x25dc740) at thread/qthread_unix.cpp:331
#5  0x00007fa32f8f06fa in start_thread (arg=0x7fa320bdb700) at pthread_create.c:333
#6  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 13 (Thread 0x7fa31a3c2700 (LWP 7536)):
#0  0x00007fa3301099cd in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fa32cee66c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa32cea2e04 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa32cea32c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa3100008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#6  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa31a3c1ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#7  0x00007fa3307fe8a4 in QThread::exec (this=this@entry=0x26d54c0) at thread/qthread.cpp:503
#8  0x00007fa3330a63c5 in QQmlThreadPrivate::run (this=0x26d54c0) at qml/ftw/qqmlthread.cpp:141
#9  0x00007fa33080384e in QThreadPrivate::start (arg=0x26d54c0) at thread/qthread_unix.cpp:331
#10 0x00007fa32f8f06fa in start_thread (arg=0x7fa31a3c2700) at pthread_create.c:333
#11 0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 12 (Thread 0x7fa3160a2700 (LWP 7537)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fa317620aa3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fa317620907 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007fa32f8f06fa in start_thread (arg=0x7fa3160a2700) at pthread_create.c:333
#4  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 11 (Thread 0x7fa3158a1700 (LWP 7538)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fa317620aa3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fa317620907 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007fa32f8f06fa in start_thread (arg=0x7fa3158a1700) at pthread_create.c:333
#4  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7fa3150a0700 (LWP 7539)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fa317620aa3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fa317620907 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007fa32f8f06fa in start_thread (arg=0x7fa3150a0700) at pthread_create.c:333
#4  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7fa31489f700 (LWP 7540)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fa317620aa3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fa317620907 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007fa32f8f06fa in start_thread (arg=0x7fa31489f700) at pthread_create.c:333
#4  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7fa3095bd700 (LWP 7541)):
#0  0x00007fa33010de8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fa32cea331c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa3040008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#4  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa3095bcce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007fa3307fe8a4 in QThread::exec (this=this@entry=0x29b7d00) at thread/qthread.cpp:503
#6  0x00007fa3330a63c5 in QQmlThreadPrivate::run (this=0x29b7d00) at qml/ftw/qqmlthread.cpp:141
#7  0x00007fa33080384e in QThreadPrivate::start (arg=0x29b7d00) at thread/qthread_unix.cpp:331
#8  0x00007fa32f8f06fa in start_thread (arg=0x7fa3095bd700) at pthread_create.c:333
#9  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7fa303408700 (LWP 7542)):
#0  0x00007fa32cee7a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fa32cea2cda in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa32cea32c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa2fc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa303407ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fa3307fe8a4 in QThread::exec (this=this@entry=0x2a91270) at thread/qthread.cpp:503
#7  0x00007fa3330a63c5 in QQmlThreadPrivate::run (this=0x2a91270) at qml/ftw/qqmlthread.cpp:141
#8  0x00007fa33080384e in QThreadPrivate::start (arg=0x2a91270) at thread/qthread_unix.cpp:331
#9  0x00007fa32f8f06fa in start_thread (arg=0x7fa303408700) at pthread_create.c:333
#10 0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7fa301b57700 (LWP 7543)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fa33544bbd4 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#2  0x00007fa33544bc19 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#3  0x00007fa32f8f06fa in start_thread (arg=0x7fa301b57700) at pthread_create.c:333
#4  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fa278d8e700 (LWP 7551)):
#0  QListData::begin (this=0x7fa274002ed0) at ../../include/QtCore/../../src/corelib/tools/qlist.h:108
#1  QList<QTimerInfo*>::constBegin (this=0x7fa274002ed0) at ../../include/QtCore/../../src/corelib/tools/qlist.h:302
#2  QTimerInfoList::timerWait (this=0x7fa274002ed0, tm=...) at kernel/qtimerinfo_unix.cpp:386
#3  0x00007fa330a39e7e in timerSourcePrepareHelper (timeout=0x7fa278d8dad4, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:127
#4  timerSourcePrepare (source=<optimized out>, timeout=0x7fa278d8dad4) at kernel/qeventdispatcher_glib.cpp:160
#5  0x00007fa32cea28ad in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007fa32cea324b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa2740008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#9  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa278d8dc90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#10 0x00007fa3307fe8a4 in QThread::exec (this=this@entry=0x33556c0) at thread/qthread.cpp:503
#11 0x00007fa333a2ced6 in QQuickPixmapReader::run (this=0x33556c0) at util/qquickpixmapcache.cpp:817
#12 0x00007fa33080384e in QThreadPrivate::start (arg=0x33556c0) at thread/qthread_unix.cpp:331
#13 0x00007fa32f8f06fa in start_thread (arg=0x7fa278d8e700) at pthread_create.c:333
#14 0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fa2708d8700 (LWP 7581)):
#0  0x00007fa32cee7a49 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fa32cea32de in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa26c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#4  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa2708d7ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007fa3307fe8a4 in QThread::exec (this=this@entry=0x39c1090) at thread/qthread.cpp:503
#6  0x00007fa270d2b035 in QQuickXmlQueryEngine::run (this=0x39c1090) at qqmlxmllistmodel.cpp:317
#7  0x00007fa33080384e in QThreadPrivate::start (arg=0x39c1090) at thread/qthread_unix.cpp:331
#8  0x00007fa32f8f06fa in start_thread (arg=0x7fa2708d8700) at pthread_create.c:333
#9  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fa26bfff700 (LWP 7582)):
#0  0x00007fa32cea03c4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fa32cea284b in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa32cea324b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa2640008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa26bffed00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fa3307fe8a4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007fa33080384e in QThreadPrivate::start (arg=0x3919970) at thread/qthread_unix.cpp:331
#8  0x00007fa32f8f06fa in start_thread (arg=0x7fa26bfff700) at pthread_create.c:333
#9  0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fa263dfb700 (LWP 7584)):
#0  0x00007fa330a39f03 in socketNotifierSourceCheck (source=0x7fa25c002c00) at kernel/qeventdispatcher_glib.cpp:74
#1  0x00007fa32cea2d51 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa32cea32c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fa330a3aa9b in QEventDispatcherGlib::processEvents (this=0x7fa25c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7fa263dfacc0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fa3307fe8a4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007fa26a3067d7 in KCupsConnection::run() () from /usr/lib/x86_64-linux-gnu/libkcupslib.so
#8  0x00007fa33080384e in QThreadPrivate::start (arg=0x35beb40) at thread/qthread_unix.cpp:331
#9  0x00007fa32f8f06fa in start_thread (arg=0x7fa263dfb700) at pthread_create.c:333
#10 0x00007fa330119b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fa3359ea8c0 (LWP 7527)):
[KCrash Handler]
#6  __memmove_ssse3_back () at ../sysdeps/x86_64/multiarch/memcpy-ssse3-back.S:1574
#7  0x00007fa3172b04ad in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#8  0x00007fa3172aed95 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#9  0x00007fa3191a6c1f in Plasma::WindowThumbnail::bindGLXTexture (this=this@entry=0x4a83200) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:447
#10 0x00007fa3191a7e44 in Plasma::WindowThumbnail::windowToTextureGLX (this=this@entry=0x4a83200, textureNode=textureNode@entry=0x45b2710) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:282
#11 0x00007fa3191a8803 in Plasma::WindowThumbnail::windowToTexture (this=0x4a83200, textureNode=0x45b2710) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:394
#12 0x00007fa3191a8d24 in Plasma::WindowThumbnail::updatePaintNode (this=0x4a83200, oldNode=<optimized out>, updatePaintNodeData=<optimized out>) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:199
#13 0x00007fa333acb2d8 in QQuickWindowPrivate::updateDirtyNode (this=this@entry=0x6063010, item=item@entry=0x4a83200) at items/qquickwindow.cpp:2984
#14 0x00007fa333acbb4b in QQuickWindowPrivate::updateDirtyNodes (this=this@entry=0x6063010) at items/qquickwindow.cpp:2722
#15 0x00007fa333acbcc0 in QQuickWindowPrivate::syncSceneGraph (this=this@entry=0x6063010) at items/qquickwindow.cpp:341
#16 0x00007fa333a9a12c in QSGGuiThreadRenderLoop::renderWindow (this=this@entry=0x2837ac0, window=0x4e01880) at scenegraph/qsgrenderloop.cpp:372
#17 0x00007fa333a9baa6 in QSGGuiThreadRenderLoop::exposureChanged (this=0x2837ac0, window=0x4e01880) at scenegraph/qsgrenderloop.cpp:422
#18 0x00007fa330d2f2e5 in QWindow::event (this=this@entry=0x4e01880, ev=ev@entry=0x7ffe4b9fd5d0) at kernel/qwindow.cpp:2060
#19 0x00007fa333ad5871 in QQuickWindow::event (this=this@entry=0x4e01880, e=e@entry=0x7ffe4b9fd5d0) at items/qquickwindow.cpp:1413
#20 0x00007fa33557c2eb in PlasmaQuick::Dialog::event (this=this@entry=0x4e01880, event=event@entry=0x7ffe4b9fd5d0) at ../../../src/plasmaquick/dialog.cpp:1168
#21 0x00007fa3191a0c45 in ToolTipDialog::event (this=0x4e01880, e=0x7ffe4b9fd5d0) at ../../../../src/declarativeimports/core/tooltipdialog.cpp:120
#22 0x00007fa3314e705c in QApplicationPrivate::notify_helper (this=this@entry=0x25c1690, receiver=receiver@entry=0x4e01880, e=e@entry=0x7ffe4b9fd5d0) at kernel/qapplication.cpp:3716
#23 0x00007fa3314ec516 in QApplication::notify (this=0x7ffe4b9fd9f0, receiver=0x4e01880, e=0x7ffe4b9fd5d0) at kernel/qapplication.cpp:3499
#24 0x00007fa3309e462b in QCoreApplication::notifyInternal (this=0x7ffe4b9fd9f0, receiver=receiver@entry=0x4e01880, event=event@entry=0x7ffe4b9fd5d0) at kernel/qcoreapplication.cpp:965
#25 0x00007fa330d274ec in QCoreApplication::sendSpontaneousEvent (event=0x7ffe4b9fd5d0, receiver=0x4e01880) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:227
#26 QGuiApplicationPrivate::processExposeEvent (e=0x3157400) at kernel/qguiapplication.cpp:2663
#27 0x00007fa330d2825d in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x3157400) at kernel/qguiapplication.cpp:1658
#28 0x00007fa330d0bf38 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:625
#29 0x00007fa322d5af10 in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:70
#30 0x00007fa32cea3127 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007fa32cea3380 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007fa32cea342c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007fa330a3aa7f in QEventDispatcherGlib::processEvents (this=0x260b440, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#34 0x00007fa3309e1dea in QEventLoop::exec (this=this@entry=0x7ffe4b9fd890, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#35 0x00007fa3309e9e8c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1229
#36 0x00007fa330d1dc3c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1542
#37 0x00007fa3314e3495 in QApplication::exec () at kernel/qapplication.cpp:2976
#38 0x0000000000432d4a in main (argc=4, argv=<optimized out>) at /build/plasma-workspace-kxRFE_/plasma-workspace-5.5.5.2/shell/main.cpp:181

Possible duplicates by query: bug 363359, bug 362526, bug 362509, bug 362461, bug 362168.

Reported using DrKonqi
Comment 1 Rene du R. Sacramento 2016-06-11 13:59:22 UTC
Created attachment 99451 [details]
New crash information added by DrKonqi

plasmashell (5.5.5) using Qt 5.5.1

- What I was doing when the application crashed: I can reproduce this crash 100% deterministically. I just upgraded from kubuntu 15.10 to 16.04. I had to delete the .cache/ directory over at tty1 to be able to start up to the desktop. After that I closed a k4dirstat window that was opened and opened a Dolphin window.

If I hover the mouse over the taskbar once, see the miniature, hover away, the miniature disapears, then hover back the plasma panel crashes 100% of the time. I reproduced it 4 times in a row after the first.

- Unusual behavior I noticed: Besides the extremely user-unfriendly hang up on startup, w/o any mention on what went wrong and how to fix it, just after I update my distro, nothing... Also, the mouse interaction on this little crash reporting editor is terrible, and the button "Suggest this crash is related" on the separate "Bug Description window" wasn't working... Too lazy to search for related opened bugs...

-- Backtrace (Reduced):
#6  __memmove_ssse3_back () at ../sysdeps/x86_64/multiarch/memcpy-ssse3-back.S:1574
[...]
#9  0x00007f78a44f6c1f in Plasma::WindowThumbnail::bindGLXTexture (this=this@entry=0x2d752c0) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:447
#10 0x00007f78a44f7e44 in Plasma::WindowThumbnail::windowToTextureGLX (this=this@entry=0x2d752c0, textureNode=textureNode@entry=0x319d130) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:282
#11 0x00007f78a44f8803 in Plasma::WindowThumbnail::windowToTexture (this=0x2d752c0, textureNode=0x319d130) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:394
#12 0x00007f78a44f8d24 in Plasma::WindowThumbnail::updatePaintNode (this=0x2d752c0, oldNode=<optimized out>, updatePaintNodeData=<optimized out>) at ../../../../src/declarativeimports/core/windowthumbnail.cpp:199
Comment 2 Rene du R. Sacramento 2016-06-11 19:30:57 UTC
I used it a little more, and it became clear that the crash always and only happens for task bar items that have a miniature preview. On taskbar items that don't like midori, or don't yet like dolphin at a certain time I can go back and forth with the mouse to the taskbar that it won't crash. I'm running inside Virtual Box by the way.
Comment 3 Marco Martin 2016-06-15 11:36:47 UTC
*** Bug 363380 has been marked as a duplicate of this bug. ***
Comment 4 Marco Martin 2016-06-15 11:37:17 UTC
*** Bug 363359 has been marked as a duplicate of this bug. ***
Comment 5 Marco Martin 2016-06-15 11:38:57 UTC
*** Bug 363336 has been marked as a duplicate of this bug. ***
Comment 6 Daniele Depetrini 2016-06-15 11:58:59 UTC
As per stack trace, the crash is happening during thumbnails generation. I have disabled the feature unchecking "Show informational tips" under "Workspace behavior" in control panel and now plasma is MUCH more stable (crashed only once since that). So the issue is clearly there. 

Daniele.
Comment 7 Marco Martin 2016-06-15 14:03:51 UTC
Git commit 9fba7c43c5c4ab6cd695a78661d0e61c43c5297e by Marco Martin.
Committed on 15/06/2016 at 14:01.
Pushed by mart into branch 'master'.

disable taskbar thumbnails with llvmpipe

the llvmpipe driver doesn't have a good quality enough for the
taskbar thumbnails components, it will have many crashes in the driver.
disabale thumbnails with that driver, as kwin disables many effects as well.

M  +8    -0    src/declarativeimports/core/windowthumbnail.cpp

http://commits.kde.org/plasma-framework/9fba7c43c5c4ab6cd695a78661d0e61c43c5297e
Comment 8 Marco Martin 2016-06-15 14:05:16 UTC
*** Bug 362509 has been marked as a duplicate of this bug. ***
Comment 9 Marco Martin 2016-06-15 14:05:22 UTC
*** Bug 362669 has been marked as a duplicate of this bug. ***
Comment 10 Kai Uwe Broulik 2016-08-12 13:52:18 UTC
*** Bug 366702 has been marked as a duplicate of this bug. ***
Comment 11 neutum 2016-08-12 14:29:02 UTC
After Plasma 5.6.5 and Frameworks 5.23 now in Backports for Kubuntu 16.04
http://www.kubuntu.org/news/plasma-5-6-5-and-frameworks-5-23-now-in-backports-for-kubuntu-16-04/
 Plasma crashes  gone !
Comment 12 Christoph Feck 2016-10-27 23:02:02 UTC
*** Bug 371753 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2016-11-09 00:38:01 UTC
*** Bug 372219 has been marked as a duplicate of this bug. ***